--- a/web/frontend/components/IconSelector.css
+++ b/web/frontend/components/IconSelector.css
@@ -30,9 +30,15 @@
 }
 
 .Polaris-Thumbnail > * {
-    width: 32px;
-    height: 32px;
-    color: rgb(139, 148, 159); /* Icon color */
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    max-width: 100%;
+    max-height: 100%;
+    color: #3F3F3F !important;
 }
 
 .Polaris-Scrollable--horizontal {
@@ -76,10 +82,6 @@
 /* Highlight border on hover */
 .icon-container:hover {
     border-color: #0070f3; /* Change to your desired color on hover */
+    
 }
 
-.Polaris-Button
-{
-    padding: 20px;
-
-}
