--- a/web/frontend/components/BadgeEditor.css
+++ b/web/frontend/components/BadgeEditor.css
@@ -42,7 +42,7 @@
 }
 
 .translations-section {
-    margin: 20px 0;
+    margin: 30px 0 20px 0px;
 }
 
 /* Responsive Styles */
@@ -89,9 +89,117 @@
 
 .Polaris-FormLayout__Item {
     margin-left: 0 !important;
+    max-width: 100% !important;
 }
 
 .Polaris-FormLayout {
     margin-top: 0 !important;
     margin-left: 0 !important;
 }
+
+
+.button-text-field {
+    flex-shrink: 0;
+    margin: 0px;
+    border: none;
+    font-weight: 600;
+    padding: 10px 16px;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    font-size: 14px;
+    background-color: rgb(32, 34, 35);
+    color: rgb(250, 250, 250);
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.2s ease-out;
+}
+
+.button-style {
+    flex-shrink: 0;
+    margin: 0px;
+    border: none;
+    font-weight: 600;
+    padding: 10px 16px;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    font-size: 14px;
+    background-color: rgb(32, 34, 35);
+    color: rgb(250, 250, 250);
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.2s ease-out;
+}
+
+
+
+
+.badge-editor-header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 16px;
+}
+
+.badge-name {
+    margin-right: 8px;
+}
+
+.badge-output-container {
+    padding: 16px;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background: #FFFFFF;
+    /* Background color */
+    /* max-width: 454px; */
+}
+
+/* .badge-icon {
+    size: 30px; 
+    color: #ed0000;
+} */
+
+.badge-text {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.badge-title {
+    font-size: 16px;
+    /* Title size */
+    color: #202223;
+    /* Title color */
+}
+
+.badge-subheading {
+    font-size: 14px;
+    /* Subheading size */
+    color: #96a4b6;
+    /* Subheading color */
+}
+
+.badge-button {
+    /* margin-top: 8px; */
+    border: none;
+    font-weight: 600;
+    padding: 10px 16px;
+    background-color: rgb(32, 34, 35);
+    color: rgb(250, 250, 250);
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.2s ease-out;
+}
+
+.productImgCls,
+.collectionImgCls {
+
+    width: 32px;
+}
+
