--- a/web/frontend/components/BadgeEditor.css
+++ b/web/frontend/components/BadgeEditor.css
@@ -1,14 +1,21 @@
 /* Frontend/Components/BadgeEditor.css */
 
+.topBox {
+    display: flex;
+    align-items: center;
+}
+
+.Polaris-Page-Header__TitleWrapper {
+    margin-top: 0 !important;
+}
+
 .Polaris-LegacyStack {
     flex-wrap: nowrap !important;
 }
-
 .form-container {
     display: flex;
     flex-direction: column;
 }
-
 .icon-preview {
     width: 78px;
     height: 78px;
@@ -96,8 +103,10 @@
     margin-top: 0 !important;
     margin-left: 0 !important;
 }
+.Polaris-FormLayout__Items {
+    display: block !important;
 
-
+}
 .button-text-field {
     flex-shrink: 0;
     margin: 0px;
@@ -136,9 +145,6 @@
     transition: background-color 0.2s ease-out;
 }
 
-
-
-
 .badge-editor-header {
     display: flex;
     align-items: center;
@@ -156,15 +162,7 @@
     align-items: center;
     gap: 10px;
     background: #FFFFFF;
-    /* Background color */
-    /* max-width: 454px; */
 }
-
-/* .badge-icon {
-    size: 30px; 
-    color: #ed0000;
-} */
-
 .badge-text {
     display: flex;
     flex-direction: column;
@@ -173,16 +171,20 @@
 
 .badge-title {
     font-size: 16px;
-    /* Title size */
-    color: #202223;
-    /* Title color */
+    font-weight: 600;
+    color: rgb(32, 34, 35);
+    max-width: 100%;
+    line-height: 1.2;
+    overflow-wrap: break-word;
 }
 
 .badge-subheading {
     font-size: 14px;
-    /* Subheading size */
-    color: #96a4b6;
-    /* Subheading color */
+    font-weight: 400;
+    color: rgb(150, 164, 182);
+    line-height: 1.2;
+    max-width: 100%;
+    overflow-wrap: break-word;
 }
 
 .badge-button {
@@ -203,3 +205,88 @@
     width: 32px;
 }
 
+.addBtnMain {
+    padding: 20px 0px !important;
+}
+.bordrBtm
+{
+    border-bottom: 1px solid rgb(221 224 228);
+}
+
+
+/* .badge-output-container.kdtYjY {
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+    justify-content: center;
+    gap: 16px 8px;
+  } */
+  .remove-button {
+    color: rgb(216, 44, 13) !important;
+  }
+  
+
+  @media (min-width: 768px) {
+    .clamPY {
+        grid-template-columns: repeat(auto-fit, minmax(32px, 52px));
+    }
+}
+
+
+.clamPY {
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(auto-fit, minmax(32px, 52px));
+    -webkit-box-pack: center;
+    justify-content: center;
+    gap: 16px 8px;
+}
+
+@media (min-width: 768px) {
+    .kdtYjY {
+        grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+    }
+}
+
+
+.kdtYjY {
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+    -webkit-box-pack: center;
+    justify-content: center;
+    gap: 16px 8px;
+}
+
+  .badge-output-page.hVFYFW {
+    display: grid;
+    align-content: start;
+    row-gap: 4px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
+    text-align: center;
+    flex: 1 1 0%;
+    font-family: inherit;
+  }
+  
+  .badge-icon.iubCKx,
+  .icon-placeholder {
+
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 4px;
+    border-radius: 4px;
+    background-color: rgb(255, 255, 255);
+    width: fit-content;
+    margin: auto;
+    
+  }
+
+  .badge-button:hover {
+    background-color: #0056b3;
+  }
